[package]
name = "mcscrape"
version = "0.0.0"
description = "Minecraft Scraper, for scraping player count and ping and exporting it to InfluxDB."
edition = "2021"

[dependencies]
mimalloc = { version = "0.1.29", default-features = false }
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
influxdb = { version = "0.5.2", features = ["derive"] }
bincode = "2.0.0-rc.2"
rand = "0.8.5"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
